# cpp-sfml-template

./: CMakeLists.txt  Makefile  README.md
include/: debug.cpp  event.cpp  renderer.cpp  rng.cpp
include/headers/: debug.hpp  event.hpp  renderer.hpp  rng.hpp
src/: main.cpp
